# De-Bug

./: .gitignore  CMakeLists.txt  README.md  build-run-mac.sh  game  game2  gameRender
raygui/: raygui.h
src/: terminal.cpp  testing.cpp  testingLevel.cpp  testingTerminal.cpp
src/assets/puzzles/: challenge1.txt  challenge2.txt  challenge3.txt  challenge4.txt  challenge5.txt
src/assets/rooms/: level1.txt  room1.txt  room2.txt  room3.txt  room4.txt  room5.txt  roomTester.txt  room_01.txt  room_02.txt
src/core/: CommandParser.cpp  CommandParser.h  ComputerTerminal.cpp  GameState.h  LevelLoader.cpp  PuzzleEngine.cpp  PuzzleEnginer.cpp  PuzzleType.h  main.cpp  oldMain.cpp
src/core/headers/: CommandParser.h  ComputerTerminal.h  GameState.h  LevelLoader.h  PuzzleEngine.h  PuzzleLoader.h  PuzzleType.h
src/renderTesting/: gameRender  renderTest.cpp  rlights.h
src/renderer/: Level1Room.cpp  Level2Room.cpp  Level3Room.cpp  Level4Room.cpp  Level5Room.cpp  compile.sh  game  game.cpp
src/renderer/objects/: computer.mtl
src/terminal/: CommandPrompt.cpp  CommandPrompt.h  Dropdwn.cpp  Dropdwn.h  PuzzleFile.h  Terminal.h  Typing.cpp  Typing.h
